fix css picture

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
 		<div id="chart" class="chart"> 
 	
 			<div id="school-icon" class="school-icon"></div>	
-			<img  id="picture" class="picture" src="https://scholar.google.com/citations/images/avatar_scholar_256.png" alt="picture">
+			<i id="picture" class="picture">
+				<img id="picture-img" class="picture-img"  src="https://scholar.google.com/citations/images/avatar_scholar_256.png" alt="picture">
+			</i>
+			
 			
 			<div class="H-index">
 				<h2 id="text-H-index" class="text-H-index">H-index</h2>
