--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
 			<div class="profile">
 				<div class="name-email">
-					<div id="name" class="name">Ion Stoica</div>
+					<div id="scholar_name" class="name">Ion Stoica</div>
 					<div id="email" class="email">ca.berkerley.edu</div>
 				</div>
 				<div class="user-citations">
@@ -41,14 +41,13 @@
 			</div>
 		</div>
 
-		<center>
+		<!--<center>
 			<p>Design Inspired by <a href="http://www.chynodeluxe.com/codepen/img/weather-widget.png" target="_blank">EZ Weather App Skin</a></p>
 			<p>Uses <a href="http://openweathermap.org/" target="_blank">Open Weather Map API</a></p>
-		</center>
+		</center>-->
 		
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script type="module" src="firebase_config.js"></script>
-		<script src="script.js" type="module"></script>
+		<script src="script.js" type="text/javascript"></script>
 		
 	</body>
 </html>
