--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
 	</head>
 	<body>
+	
 		<!-- The core Firebase JS SDK is always required and must be listed first -->
 		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
@@ -32,6 +33,7 @@
 
 			<div class="profile">
 				<div class="name-email">
+					<a id="name-email" href=""/>
 					<div id="scholar_name" class="name">Ion Stoica</div>
 					<div id="email" class="email">ca.berkerley.edu</div>
 				</div>
@@ -47,6 +49,7 @@
 		</center>-->
 		
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script type="module" src="firebase_config.js"></script>
 		<script src="script.js" type="text/javascript"></script>
 		
 	</body>
